--- a/actions.yml
+++ b/actions.yml
@@ -1,1 +1,81 @@
+name: actions for build jobs
 
+inputs:
+  aws-access-key-id:
+    description: AWS Access Key ID.
+    required: false
+
+  aws-secret-access-key:
+    description: AWS Secret Access Key
+    required: false
+
+  aws-region:
+    description: AWS Region 
+    required: true
+
+  images:
+    description: Docker images to use as base name for tags
+    required: true
+    default: ${{ runs.steps.login-ecr.outputs.registry }}/${{ GITHUB_REPOSITORY }}
+
+  file:
+    description: "Path to the Dockerfile"
+    required: false
+    default: ./Dockerfile
+
+  build-args:
+    description: "List of build-time variables"
+    required: false
+
+  tags-meta:
+    description: List of tags as key-value pair attributes"
+    required: false
+    default: |
+      type=schedule
+      type=semver,pattern={{version}}
+      type=semver,pattern={{major}}.{{minor}}
+      type=semver,pattern={{major}}
+      type=ref,event=branch
+      type=ref,event=pr
+      type=sha
+
+  tags:
+    description: "List of tags"
+    required: false
+    default: ${{ runs.steps.meta.outputs.tags }}
+
+  labels:
+    description: "labels"
+    required: false
+    default: ${{ runs.steps.meta.outputs.labels }}
+
+
+runs:
+  steps:
+   - name: Configure AWS credentials
+     uses: aws-actions/configure-aws-credentials@v1
+     with:
+       aws-access-key-id: ${{ inputs.aws-access-key-id }}
+       aws-secret-access-key: ${{ inputs.aws-secret-access-key }}
+       aws-region: ${{ inputs.aws-region }}
+
+   - name: Amazon ECR "Login" Action for GitHub Actions
+     id: login-ecr
+     uses: aws-actions/amazon-ecr-login@v1
+
+   - name: Docker meta
+     id: meta
+     uses: docker/metadata-action@v4
+     with:
+       images: ${{ inputs.images }}
+       tags: ${{ inputs.tags-meta }}
+
+   - name: Docker build and push
+     uses: docker/build-push-action@v3
+     with: 
+        context: .
+        file: ${{ inputs.file }}
+        build-args: ${{ inputs.build-args }}
+        push: true
+        tags: ${{ inputs.tags }}
+        labels: ${{ inputs.labels }}
