--- a/action.yml
+++ b/action.yml
@@ -48,6 +48,7 @@ inputs:
 
 
 runs:
+  using: 'composite'
   steps:
    - name: Configure AWS credentials
      uses: aws-actions/configure-aws-credentials@v1
